--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,20 @@
-h1{
-    color: navy;
+.home-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 18%;
+    padding: 10%;
+    background: crimson;
+    border-radius: 60px;
+
+    h1{
+        font-size: 57px;
+        font-weight: bolder;
+        color: beige;
+    }
+
+    h2{
+        font-size: 50px;
+    }
 }
