--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="css/home.css">
 <div class="container col-md-8 col-sm-10 col-sm-offset-1 col-xs-12 col-md-offset-2">
-        <h1>Home</h1>
+        <div class="home-container">
+            <h1>Welcome</h1>
+            <% if(locals.user) { %> 
+            <h2><%= locals.user.name %></h2>
+            <% } %>
+        </div>
     </ul>
 </div>
