--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,14 +25,14 @@
                 <a class="navbar-brand" href="#">Authentication</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
-                <!-- <ul class="nav navbar-nav">
-                  <!-- <li><a href="">Button1</a></li>
-                  <li><a href="">Button2</a></li>
-                  <li><a href="">Button3</a></li> -->
-                </ul> -->
                 <ul class="nav navbar-nav custom-float-right">
-                  <li><a href="">Sign In</a></li>
-                  <li><a href="">Sign Up</a></li>
+                  <% if(locals.user) { %> 
+                    <li><a href="/users/profile">Profile</a></li>
+                    <li><a href="/users/sign-out">Sign Out</a></li>
+                  <% } else { %>  
+                  <li><a href="/users/sign-in">Sign In</a></li>
+                  <li><a href="/users/sign-up">Sign Up</a></li>
+                  <% } %>
                 </ul>
               </div>
             </div>
