add google authentication

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -22,6 +22,6 @@
             <input type="submit" value="Add User">
             <br>
         </form>        
-        <h3><a href="/users/auth/google">Sign Up With Google</a></h3>
+        <h3><a href="/authenticate/auth/google">Sign Up With Google</a></h3>
     </ul>
 </div>
