--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,10 +28,10 @@
                 <ul class="nav navbar-nav custom-float-right">
                   <% if(locals.user) { %> 
                     <li><a href="/users/profile">Profile</a></li>
-                    <li><a href="/users/sign-out">Sign Out</a></li>
+                    <li><a href="/authenticate/sign-out">Sign Out</a></li>
                   <% } else { %>  
-                  <li><a href="/users/sign-in">Sign In</a></li>
-                  <li><a href="/users/sign-up">Sign Up</a></li>
+                  <li><a href="/authenticate/sign-in">Sign In</a></li>
+                  <li><a href="/authenticate/sign-up">Sign Up</a></li>
                   <% } %>
                 </ul>
               </div>
