--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,9 +37,29 @@
               </div>
             </div>
           </nav>
+
         <%- body %>    
         <%- script %>
-        
+        <script>
+            <% if(flash.success && flash.success.length > 0) { %> 
+              new Noty({
+                          theme:'relax',
+                          text: '<%= flash.success %>',
+                          type: 'success',
+                          layout:'topRight',
+                          timeout:2000,
+                      }).show();
+            <% } %> 
+            <% if(flash.error && flash.error.length > 0) { %> 
+              new Noty({
+                          theme:'relax',
+                          text: '<%= flash.error %>',
+                          type: 'error',
+                          layout:'topRight',
+                          timeout:2000,
+                      }).show();
+            <% } %> 
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </body>
 </html>
