authentication using passport local and google done

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="css/home.css">
 <div class="container col-md-8 col-sm-10 col-sm-offset-1 col-xs-12 col-md-offset-2">
+    <div class="home-container">
         <h1>Profile</h1>
-        <h1><%= user.name %></h1>
-        <h1><%= user.email %></h1>
-        <h2><a href="/users/change-password">Change Password</a></h2>
-    </ul>
+        <div class="text-heading">Name : <%= user.name %></div>
+        <div class="text-heading">Email : <%= user.email %></div>
+        <div class="text-heading" id="change-password"><a href="/users/change-password">Change Password</a></div>
+    </div>
 </div>
