--- a/views/set-password.ejs
+++ b/views/set-password.ejs
@@ -1,12 +1,6 @@
 <div class="container col-md-4 col-sm-10 col-sm-offset-1 col-xs-12 col-md-offset-4 form-container">
-    <div class="form-heading">Change Password</div>      
-    <form action="/users/update-password" method="POST">
-        <% if(user.is_password_available) { %> 
-        <div class="form-group">
-            <label for="old_password">Old Password</label>
-            <input type="password" name="old_password" class="form-control" id="old_password" placeholder="Old Password" required>
-        </div>
-        <% } %>
+    <div class="form-heading">Reset Password</div>      
+    <form action="/forget-password/save-password/<%= token %>" method="POST">
         <div class="form-group">
             <label for="new_password">New Password :</label>
             <input type="password" name="new_password" class="form-control" id="new_password" placeholder="New Password" required>
@@ -15,7 +9,6 @@
             <label for="confirm_password">Confirm Password :</label>
             <input type="password" name="confirm_password" class="form-control" id="confirm_password" placeholder="Confirm Password" required>
         </div>
-        <button type="submit" class="btn btn-success width-100-percent button-heading">Change Password</button>
+        <button type="submit" class="btn btn-info width-100-percent button-heading">Save Password</button>
     </form>
 </div>
-
