--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,10 +11,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <base href="/">
         <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/common.css">
         <%- style %>
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse nav-background-color">
             <div class="container-fluid">
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -22,16 +23,16 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href="#">Authentication</a>
+                <a class="navbar-brand nav-heading" href="/">Authentication</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav custom-float-right">
                   <% if(locals.user) { %> 
-                    <li><a href="/users/profile">Profile</a></li>
-                    <li><a href="/authenticate/sign-out">Sign Out</a></li>
+                    <li class="nav-heading"><a href="/users/profile">Profile</a></li>
+                    <li class="nav-heading"><a href="/authenticate/sign-out">Sign Out</a></li>
                   <% } else { %>  
-                  <li><a href="/authenticate/sign-in">Sign In</a></li>
-                  <li><a href="/authenticate/sign-up">Sign Up</a></li>
+                  <li class="nav-heading"><a href="/authenticate/sign-in">Sign In</a></li>
+                  <li class="nav-heading"><a href="/authenticate/sign-up">Sign Up</a></li>
                   <% } %>
                 </ul>
               </div>
