--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,27 +1,23 @@
-<link rel="stylesheet" href="css/home.css">
-<div class="container col-md-8 col-sm-10 col-sm-offset-1 col-xs-12 col-md-offset-2">
-        <h1>Sign Up</h1>
-        <form action="/users/add-user" method="POST">
+<div class="container col-md-4 col-sm-10 col-sm-offset-1 col-xs-12 col-md-offset-4 form-container">
+    <div class="form-heading">Sign Up</div>      
+    <form action="/users/add-user" method="POST">
+        <div class="form-group">
             <label for="email">Email :</label>
-            <br>
-            <input type="email" name="email" id="email" placeholder="Email" required>
-            <br>
+            <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
+        </div>
+        <div class="form-group">
             <label for="name">Name :</label>
-            <br>
-            <input type="text" name="name" id="name" placeholder="Name" required>
-            <br>
+            <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
+        </div>
+        <div class="form-group">
             <label for="password">Password :</label>
-            <br>
-            <input type="password" name="password" id="password" placeholder="Password" required>
-            <br>
+            <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+        </div>
+        <div class="form-group">
             <label for="confirm_password">Confirm Password :</label>
-            <br>
-            <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password" required>
-            <br>
-            <br>
-            <input type="submit" value="Add User">
-            <br>
-        </form>        
-        <h3><a href="/authenticate/auth/google">Sign Up With Google</a></h3>
-    </ul>
+            <input type="password" name="confirm_password" class="form-control" id="confirm_password" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn btn-success width-100-percent button-heading">Sign Up</button>
+    </form>
+    <div class="width-100-percent btn btn-danger button-heading"><a href="/authenticate/auth/google">Sign Up With Google</a></div>
 </div>
